--- a/contact_details.html
+++ b/contact_details.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Details</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
       <li>Twitter: <strong>Raddy Tweet</strong></li>
     </p>
   </ul>
-  <hr size="3" noshade>
+  <hr>
   <form action="mailto:radford@live.co.za" method="post" enctype="text/plain">
     <label for="">Your Name:</label>
     <input type="text" name="yourName" value=""><br />
