--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Radford's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -21,7 +23,7 @@
       </td>
     </tr>
   </table>
-  <hr size='3' noshade>
+  <hr>
   <h3><strong>Education</strong></h3>
   <ul>
     <li>Square Hill Primary</li>
@@ -29,7 +31,7 @@
     <li>Windsor High</li>
     <li>CTI Computer Training</li>
   </ul>
-  <hr size="3" noshade>
+  <hr>
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
@@ -50,7 +52,7 @@
     </tbody>
 
   </table>
-  <hr size="3" noshade>
+  <hr>
   <h3>Skills</h3>
   <table>
     <tr>
@@ -59,11 +61,11 @@
           <tbody>
             <tr>
               <td>Sql</td>
-              <td>★★★★</td>
+              <td>☆☆☆☆</td>
             </tr>
             <tr>
               <td>Flowcentric</td>
-              <td>★★★★</td>
+              <td>☆☆☆☆</td>
             </tr>
           </tbody>
         </table>
@@ -73,11 +75,11 @@
           <tbody>
             <tr>
               <td>HTML</td>
-              <td>★★</td>
+              <td>☆☆</td>
             </tr>
             <tr>
               <td>CSS</td>
-              <td>★</td>
+              <td>☆☆</td>
             </tr>
           </tbody>
         </table>
@@ -89,7 +91,7 @@
 
   </table>
 
-  <hr size="3" noshade>
+  <hr>
   <ul>
     <li><a href="hobbie.html">View Hobbies</a></li>
     <li><a href="contact_details.html">Contact Me</a></li>
